some fixes in controller
